# media_soup_conferencing

./: .gitmodules  README.md
client/: package.json
client/public/: app.js  conference_signaler.js  index.html  media_soup_audio_conference.js  media_soup_conference.js  util.js
client_cpp/: CMakeLists.txt  window_2017_build_generator.bat
client_cpp/app/: CMakeLists.txt  main.cxx  media_soup_conferencing_signalling.cpp  media_soup_conferencing_signalling.h  util.cpp  util.h
client_cpp/conference_app/: CMakeLists.txt  main.cxx  ui_communication_handler.cpp  ui_communication_handler.h
client_cpp/include/common/: common_def.h
client_cpp/include/mediasoup/include/: Utils.hpp  version.hpp
client_cpp/lib/: CMakeLists.txt
client_cpp/lib/display_manager/: CMakeLists.txt  layout_manager.cpp  layout_manager.h  win32_window.cpp  win32_window.h  win32_window_creator.cpp  win32_window_creator.h  window.h  window_creater.h
client_cpp/lib/function_thread_handler/: CMakeLists.txt  func_thread_handler.cpp  func_thread_handler.h  msg_loop_libraray.h
client_cpp/lib/json_parser/: CMakeLists.txt  json_parser.cpp  json_parser.h
client_cpp/lib/media_receiver/: CMakeLists.txt
client_cpp/lib/media_receiver/video_receiver/: CMakeLists.txt  video_frame_callback.h  video_track_receiver.cpp  video_track_receiver.h  video_track_receiver_impl.cpp  video_track_receiver_impl.h
client_cpp/lib/media_render_util/: CMakeLists.txt  video_render_util.cpp  video_render_util.h
client_cpp/lib/mediasoup_conference/: CMakeLists.txt  conference_handler.cpp  conference_handler.h  mediasoup_conference.cpp  mediasoup_conference.h  room.h  room_impl.cpp  room_impl.h  util.cpp  util.h
client_cpp/lib/mediasoup_conference/peer_connection/: VcmCapturer.cpp  VcmCapturer.hpp  VideoCapturer.cpp  peerConnectionUtils.cpp  peerConnectionUtils.hpp
client_cpp/lib/mediasoup_conference/signalling/: media_soup_conferencing_signalling.cpp  media_soup_conferencing_signalling.h
client_cpp/lib/server_communication_util/: CMakeLists.txt  rendering_server_client.cpp  rendering_server_client.h  util.cpp  util.h
client_cpp/lib/signaller/: CMakeLists.txt  signaller.cpp  signaller.h  websocket_signaller.cpp  websocket_signaller.h
client_cpp/lib/video_render/: CMakeLists.txt  dirextx_render.cpp  dirextx_render.h  renderer.cpp  renderer.h
client_cpp/lib/websocket_server/: CMakeLists.txt  websocket_server.cpp  websocket_server.h
client_cpp/lib/windows_util/: CMakeLists.txt  windows_util.cpp  windows_util.h
client_cpp/rendering_window/: CMakeLists.txt  main.cpp
client_cpp/unit_test/: CMakeLists.txt  main.cxx
server/: config.js  index_websocket.js  media_soup_server.js  package.json  websocket_server.js
